Bug 3759 - [mga] G100 gets black screen
Summary: [mga] G100 gets black screen
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/mga (show other bugs)
Version: 6.8.99.14
Hardware: x86 (IA32) Linux (All)
: high normal
Assignee: Xorg Project Team
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-07-12 13:59 UTC by Ian Romanick
Modified: 2005-07-24 23:18 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Ian Romanick 2005-07-12 13:59:57 UTC
Installed a fresh FC3 system with an AGP G100 card.  It worked perfectly. 
Installed today's X.org CVS (6.8.99.14 according to the log), and I get a black
screen when starting X.  It isn't crashed because Ctrl-Alt-Backspace properly
exits the server.  Ctrl-Alt-FnX properly switch to the text console.

G400 and G450 work correctly with this version of the driver.  I will
investigate whether or not this is caused by my chages from 30-June-2005 to the
BIOS processing code.
Comment 1 Ian Romanick 2005-07-26 09:18:39 UTC
I blame cut-and-paste.  The wrong bit was being tested to determine the PLL
reference frequency.  The bit from the version 4 (e.g., for G400 cards) PInS was
tested instead of the one from the version 3.

I just committed a fix.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.