PInS data on later cards (G200 and later) contains information about the     physical bus used for the card. This allows accurate detection of PCI     cards that use a PCI-to-PCI bridge with an AGP chip. Correctly disable DRI on PCI cards used with pre-3.2 DRM. Previously the     test was performed based on PCI ID (see above for why this is wrong)     and was done *before* the DRM version was known. Bug #3759: <https://bugs.freedesktop.org/show_bug.cgi?id=3759> Correctly     determine the PLL reference frequency from the PInS data. Previously     the wrong bit was tested. Blame the dumb programmer that used     cut-and-paste (that would be me).